# nlp-cxr_report_generation

./: .gitignore  PLAN.md  README.md  main.py  pyproject.toml
configs/: default.yaml  swin_bert_chexpertplus-2605261127.yaml  swin_bert_lora_chexpertplus-2605261127.yaml  swin_bert_mimic.yaml  swin_clinicalbert_combined.yaml  vit_gpt2_mimic.yaml
nlp_cxr_rs/: Cargo.toml  pyproject.toml
nlp_cxr_rs/src/: bleu.rs  chexbert.rs  lib.rs  rouge.rs
src/analysis/: error_analysis.py
src/data/chexpertplus/: dataset.py
src/data/mimiccxr/: dataset.py
src/evaluate/: chexpert_labeler.py  metrics.py
src/inference/: generate.py
src/model/: captioner.py  decoders.py  encoders.py  swin_bert.py
src/preprocess/: chexpertplus.py  mimiccxr.py
src/script/: run_analysis.py  run_evaluate.py  run_preprocess.py  run_train.py
src/train/: config.py  trainer.py
src/util/: count.py  text_norm.py
