[project]
name = "nlp-image-captioning"
version = "0.1.0"
description = "Chest X-ray image captioning — NLP course project"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.47.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.26.0",
    "accelerate>=1.0.0",
    "evaluate>=0.4.0",
    "pillow>=11.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.67.0",
    "rouge-score>=0.1.2",
    "nltk>=3.9.0",
    "pyyaml>=6.0",
    "bert-score>=0.3.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "maturin>=1.13.3",
]
