[build-system]
requires      = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name            = "nlp-cxr-rs"
version         = "0.1.0"
requires-python = ">=3.11"
description     = "Fast Rust extensions for CXR report generation metrics"

[tool.maturin]
features    = ["pyo3/extension-module"]
module-name = "nlp_cxr_rs"
